--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -16,4 +16,7 @@ path = "tests/progress.rs"
 trybuild = { version = "1.0.49", features = ["diff"] }
 
 [dependencies]
+syn = {version = "1.0.92", features = ["extra-traits","parsing"]}
+quote = "1.0"
+proc-macro2 = "1.0.38"
 # TODO
